# sdmc-compliance

./: README.md
sdmc-compliance/: README.md  docker-compose.yml  validate.sh
sdmc-compliance/docs/plans/: 2026-03-07-sdmc-compliance-platform.md
sdmc-compliance/migrations/: 001_init_permits_schema.sql
sdmc-compliance/outputs/: SDMC-VALIDATION-REPORT.md
sdmc-compliance/policy/opa/compliance-gates/: gate-001-sdmc-code-validation.rego  gate-002-sdmc-plan-review.rego  gate-003-sdmc-inspection.rego
sdmc-compliance/services/evidence-ledger/: Dockerfile  pyproject.toml
sdmc-compliance/services/evidence-ledger/app/: db.py  main.py  ui_router.py
sdmc-compliance/services/evidence-ledger/app/api/v1/: evidence.py  integrity.py
sdmc-compliance/services/evidence-ledger/app/models/: evidence.py
sdmc-compliance/services/evidence-ledger/app/repo/: evidence_repo.py
sdmc-compliance/services/evidence-ledger/app/schemas/: evidence.py
sdmc-compliance/services/evidence-ledger/app/services/: opa_gate.py
sdmc-compliance/services/evidence-ledger/app/templates/: base.html  dashboard.html  submit.html
sdmc-compliance/services/evidence-ledger/tests/: conftest.py  test_evidence_api.py  test_gates.py  test_integrity.py
