[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evidence-ledger"
version = "1.0.0"
description = "SDMC Cryptographic Compliance Audit Trail - Per NIST SP 800-53 AU-11"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.28.0",
    "aiosqlite>=0.19.0",
]

[tool.hatch.build.targets.wheel]
# Package directory is 'app/' not 'evidence_ledger/' - must be explicit.
# Hatchling default heuristic looks for a directory matching the project name
# (evidence-ledger → evidence_ledger), which does not exist here.
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
